sessions and reports

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,15 @@ dependencies:
   audioplayers: ^6.5.1
   cloud_firestore: ^6.1.0
   cupertino_icons: ^1.0.8
+  excel: ^4.0.6
   firebase_core: ^4.2.1
+  fl_chart: ^1.1.1
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  intl: ^0.20.2
+  pdf: ^3.11.3
+  printing: ^5.14.2
   provider: ^6.1.5+1
 
 dev_dependencies:
